2004-05-27  Peter Barada  <peter@the-baradas.com>

	* config/tc-m68k.c (md_begin): Sort the opcode table into
	alphabetical order.
	(m68k_compare_opcode): New function to do the sorting.

2004-05-24  Peter Barada  <peter@the-baradas.com>

	* config/m68k-parse.y(operand): Allow for MAC/EMAC mask
	addressing on MIT style operands.
	* config/m68k-parse.y(yylex): Allow '-&' for predecrement
	w/mask addressing.
	* config/tc-m68k.c(install_operand): Comment 'G' and 'H' type
	operands.

2004-05-23  Alan Modra  <amodra@bigpond.net.au>

	* expr.c (operand, operator): Don't reject '++' and '--'.

2004-05-20  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-mips.c (append_insn): Use ISA-encoded addresses in MIPS16
	dwarf tables.

2004-05-17  Adam Nemet  <anemet@lnxw.com> 

	* configure.in: Add ppc-*-lynxos*.  Update i386-*-lynxos* to ELF.
	* configure: Regenerate.

2004-05-13  Paul Brook  <paul@codesourcery.com>

	* dw2gencfi.c (output_cie):  Handle dwarf3 format CIE entries.

2004-05-13  Joel Sherrill <joel@oarcorp.com>

	* configure.in (or32-*-rtems*): Switch to elf.
	* configure: Regenerate.

2004-05-13  Nick Clifton  <nickc@redhat.com>

	* po/fr.po: Updated French translation.

2004-05-11  Nick Clifton  <nickc@redhat.com>

	* doc/as.texinfo (Section): Document G and T flags to .section
	directive.  Document the extra arguments that the G flag
	requires.  Document the #tls flag.

2004-05-11  H.J. Lu  <hongjiu.lu@intel.com>

	* subsegs.c (section_symbol): Create a new section symbol if
	the existing one doesn't match.
	* symbols.c (symbol_set_bfdsym): Don't reset BFD section symbol.

2004-05-07  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-mips.c (append_insn, mips_emit_delays): Extend -mfix-vr4120
	to cope with VR4181A errata MD(1) and MD(4).

2004-05-07  Brian Ford  <ford@vss.fsi.com>

	* NEWS: Mention .secrel32 for pe[i]-i386.

2004-05-07  Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-frv.h (MAX_MEM_FOR_RS_ALIGN_CODE): New.
	(HANDLE_ALIGN): New.
